[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/UI/JoinServer.gd" type="Script" id=2]

[node name="JoinServer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 583.0
margin_top = 335.0
margin_right = 783.0
margin_bottom = 433.0
custom_constants/separation = 20

[node name="ServerIP" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
text = "127.0.0.1"

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 98.0
text = "Join"

[node name="Back" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 44.0
text = "Back"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
